[project]
name = "github-context-tools"
version = "0.1.0"
description = "Typed GitHub API tools for fetching context in LLM-based workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Kruthi Shiva Kumar", email = "kruthis2601@gmail.com" },
]
keywords = ["github", "pull-request", "code-review", "llm", "diff", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "git-unified-diff-parse>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/kruthis123/github-context-tools"
Repository = "https://github.com/kruthis123/github-context-tools"
"Bug Tracker" = "https://github.com/kruthis123/github-context-tools/issues"
Changelog = "https://github.com/kruthis123/github-context-tools/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_context_tools"]

[tool.hatch.build.targets.wheel.force-include]
"src/github_context_tools/py.typed" = "github_context_tools/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.21",
]
